--- a/styles/index.css
+++ b/styles/index.css
@@ -2,13 +2,13 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-family: "Rubik", sans-serif;
 }
 nav {
-  position: fixed;
-  top: 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
+  background-color: RGB(255, 255, 255, 0.5);
 }
 .logo {
   width: 100px;
@@ -16,5 +16,30 @@ nav {
 .details {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: flex-end;
+  padding-right: 25px;
+}
+
+.wrapper {
+  text-align: center;
+}
+
+input[type="text"] {
+  padding-left: 5px;
+  height: 30px;
+  position: relative;
+  border: 1px solid #cdcdcd;
+  border-color: #fd7e14;
+  background-color: white;
+  font-size: 16px;
+}
+input[type="submit"] {
+  background-color: #fd7e14;
+  border: none;
+  color: white;
+  padding: 5px;
+  text-align: center;
+  text-decoration: none;
+  font-size: 16px;
+  cursor: pointer;
 }
