--- a/styles/index.css
+++ b/styles/index.css
@@ -21,9 +21,13 @@ nav {
 }
 
 .wrapper {
-  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-
+.search-wrapper {
+  display: flex;
+}
 input[type="text"] {
   padding-left: 5px;
   height: 30px;
@@ -42,4 +46,23 @@ input[type="submit"] {
   text-decoration: none;
   font-size: 16px;
   cursor: pointer;
+}
+.cards-wrapper {
+  width: 90%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 20rem);
+  justify-content: center;
+}
+.card {
+  overflow: hidden;
+  box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
+  background-color: white;
+  text-align: center;
+  border-radius: 1rem;
+  position: relative;
+  margin: 0.5rem;
+  /* width:auto; */
+}
+.card-img {
+  width: 200px;
 }
