--- a/styles/index.css
+++ b/styles/index.css
@@ -5,7 +5,7 @@
   font-family: "Rubik", sans-serif;
 }
 nav {
-  padding: 0 64px;
+  padding: 12px 64px;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -23,7 +23,6 @@ nav {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  padding-right: 25px;
   gap: 32px;
 }
 
@@ -34,10 +33,16 @@ nav {
 }
 .search-wrapper {
   display: flex;
+  margin-bottom: 36px;
+}
+.heading {
+  text-align: center;
+  color: #444;
+  margin: 0 0 24px 0;
 }
 input[type="text"] {
-  padding-left: 5px;
-  height: 30px;
+  padding: 16px;
+  width: 600px;
   position: relative;
   border: 1px solid #cdcdcd;
   border-color: #fd7e14;
@@ -47,6 +52,7 @@ input[type="text"] {
 input[type="submit"] {
   background-color: #fd7e14;
   border: none;
+  width: 100px;
   color: white;
   padding: 5px;
   text-align: center;
