--- a/styles/index.css
+++ b/styles/index.css
@@ -5,6 +5,7 @@
   font-family: "Rubik", sans-serif;
 }
 nav {
+  width: 100%;
   padding: 12px 64px;
   display: flex;
   align-items: center;
@@ -30,6 +31,7 @@ nav {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin-top: 4rem;
 }
 .search-wrapper {
   display: flex;
