--- a/styles/login.css
+++ b/styles/login.css
@@ -19,8 +19,12 @@
 
 .form {
   padding: 6rem 3rem;
-  background-color: #ffe8cc;
-  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.27);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(9.8px);
+  -webkit-backdrop-filter: blur(9.8px);
+  border: 1px solid rgba(255, 255, 255, 0.71);
 }
 
 .input-field-cotainer {
