--- a/styles/index.css
+++ b/styles/index.css
@@ -51,6 +51,11 @@ input[type="text"] {
   background-color: white;
   font-size: 16px;
 }
+
+input[type="text"]:focus {
+  outline: none !important;
+    border:1px solid #d9480f;
+}
 input[type="submit"] {
   background-color: #fd7e14;
   border: none;
@@ -72,7 +77,7 @@ input[type="submit"] {
   overflow: hidden;
   box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
   background-color: white;
-  text-align: center;
+  text-align: left;
   border-radius: 1rem;
   position: relative;
   margin: 0.5rem;
@@ -80,4 +85,27 @@ input[type="submit"] {
 }
 .card-img {
   width: 200px;
+}
+.product-title{
+font-weight: bold;
+}
+
+.product-price{
+color: #ff922b;
+}
+
+@media only screen and (max-width: 750px) {
+.search-wrapper {
+  display: flex;
+flex-direction: column;
+align-items: center;
+gap: 10px;
+}
+
+}
+
+@media only screen and (max-width: 650px) {
+    input[type="text"] {
+    width: 400px;
+    }
 }
