--- a/styles/index.css
+++ b/styles/index.css
@@ -25,7 +25,6 @@ nav {
   justify-content: flex-end;
   gap: 32px;
 }
-
 .wrapper {
   display: flex;
   flex-direction: column;
@@ -75,17 +74,31 @@ nav {
   border-radius: 1rem;
   position: relative;
   margin: 0.5rem;
-  /* width:auto; */
+  width: fit-content;
+  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
+    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  line-height: 1.6;
 }
 .card-img {
   width: 200px;
+  height: 150px;
 }
+.content-wrapper {
+  padding: 20px;
+  margin-left: 10%;
+  width: fit-content;
+}
+
 .product-name {
   font-weight: bold;
 }
 
 .product-price {
   color: #ff922b;
+}
+
+.product-left {
+  color: #868e96;
 }
 
 @media only screen and (max-width: 750px) {
