--- a/styles/index.css
+++ b/styles/index.css
@@ -71,14 +71,20 @@ nav {
   box-shadow: 0px 2px 8px 0px var(--clr-gray-light);
   background-color: white;
   text-align: left;
-  border-radius: 1rem;
+  border-radius: 5px;
   position: relative;
   margin: 0.5rem;
   width: fit-content;
-  box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px,
-    rgba(60, 64, 67, 0.15) 0px 2px 6px 2px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
   line-height: 1.6;
+  transition: all 0.3s ease-in-out;
 }
+
+.card:hover {
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 30px 60px -12px,
+    rgba(0, 0, 0, 0.3) 0px 18px 36px -18px;
+}
+
 .card-img {
   width: 200px;
   height: 150px;
@@ -90,11 +96,24 @@ nav {
 }
 
 .product-name {
+  font-weight: 800;
+  font-size: 1.4rem;
+}
+
+.add-to-cart-btn {
+  width: 200px;
+  padding: 0.8rem 1.6rem;
+  background-color: #fd7e14;
+  border: none;
   font-weight: bold;
+  color: white;
+  border-radius: 5px;
+  margin-top: 20px;
 }
 
 .product-price {
   color: #ff922b;
+  font-size: 1.4rem;
 }
 
 .product-left {
