--- a/styles/index.css
+++ b/styles/index.css
@@ -15,6 +15,16 @@ nav {
 .logo {
   width: 100px;
 }
+.logo-title {
+  font-size: 1.5rem;
+  font-weight: 800;
+  color: #fd7e14;
+}
+.logo-container {
+  display: flex;
+  align-items: center;
+  gap: 8px;
+}
 .nav-icon {
   width: 24px;
   height: 24px;
