--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   box-sizing: border-box;
   font-family: "Rubik", sans-serif;
+  color: #333;
 }
 nav {
   width: 100%;
@@ -119,6 +120,7 @@ nav {
   color: white;
   border-radius: 5px;
   margin-top: 20px;
+  cursor: pointer;
 }
 
 .product-price {
