--- a/styles/index.css
+++ b/styles/index.css
@@ -26,6 +26,7 @@ nav {
   display: flex;
   align-items: center;
   gap: 8px;
+  cursor: pointer !important;
 }
 .nav-icon {
   width: 24px;
@@ -37,10 +38,10 @@ nav {
   justify-content: flex-end;
   gap: 32px;
 }
-.cart-icon{
+.cart-icon {
   cursor: pointer;
 }
-.logout-icon{
+.logout-icon {
   cursor: pointer;
 }
 .wrapper {
@@ -155,9 +156,9 @@ nav {
 }
 
 @media only screen and (max-width: 600px) {
-    .logo-title{
-      display: none;
-}
+  .logo-title {
+    display: none;
+  }
 }
 .form-input-field {
   width: 300px;
